# Riddarspelet

./: CMakeCache.txt  CMakeLists.txt  KNIGHT  KNIGHT.cbp  Makefile  README.md  cmake_install.cmake  main.c  main.h
Data/Images/: Backgroundlevel1.xcf
Data/Scripts/animationScripts/: CMakeLists.txt  Makefile  cmake_install.cmake  knightAnimation.c  knightAnimation.h
Data/Scripts/coreScripts/: CMakeLists.txt  Makefile  cmake_install.cmake  coreEvents.c  coreEvents.h  structs.h
Data/Scripts/gamePhysics/: CMakeLists.txt  Makefile  cmake_install.cmake  moveScripts.c  moveScripts.h
Data/Scripts/renderScripts/: CMakeLists.txt  Makefile  cmake_install.cmake  doRender.c  doRender.h  renderDeclareBackgrounds.c  renderDeclareBackgrounds.h  renderDeclareKnight1.c  renderDeclareKnight1.h
cmake/modules/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
